<?xml version="1.0"?>
<package>
  <name>gazebo</name>
  <version>0.0.0</version>
  <description>The gazebo package</description>
  <maintainer email="chris.smalley.32@gmail.com">chris</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
